--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.28.0",
+    "eslint-plugin-react": "^7.24.0",
     "gh-pages": "^3.2.0"
   }
 }
