fix: now using react hooks with Redux

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,10 @@
         "browser": true,
         "es2021": true
     },
-    "extends": "plugin:react/recommended",
+    "extends": [
+        "trybe-frontend",
+        "plugin:react/recommended"
+    ],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -13,7 +16,5 @@
     },
     "plugins": [
         "react"
-    ],
-    "rules": {
-    }
+    ]
 }
