--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "./node_modules/.bin/eslint"
   },
   "eslintConfig": {
     "extends": [
@@ -43,8 +44,15 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.28.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-trybe-frontend": "^1.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-sonarjs": "^0.8.0-125",
     "gh-pages": "^3.2.0"
   }
 }
